Changed sample project to use gradle dependency

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
+    compile 'com.github.rajyvan:TrackingRingWidget:1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile project(':library')
 }
